[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/car new/car(64x64).png" type="Texture" id=1]
[ext_resource path="res://script/Car.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 33 )

[node name="Car" type="RigidBody2D"]
collision_mask = 0
mode = 2
gravity_scale = 0.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.25, -1 )
shape = SubResource( 1 )
disabled = true

[node name="CollideRay2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -28 )

[node name="GroundRay2D" type="RayCast2D" parent="."]
enabled = true

[node name="FrontRay2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 64, 0 )

[node name="CarSprite" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 0, -15 )
texture = ExtResource( 1 )
